Blender Freeze On win7 when change smoke domain setting. #35082

Closed
opened 2013-04-26 06:37:27 +02:00 by Harrison Yu · 5 comments

%%%Windows 7 Pro , GTX 580

Blender version with error : 2.66 buldbot r56296
and version that worked :offical 2.66

Short description of error : Blender Freeze On win7 when change smoke domain setting.

Steps for others to reproduce the error (preferably based on attached .blend file):
1.set the deafault cube to a smoke domain.
2.change time scale value

other setting as well
also ctrl + D will do the same
moving flow object freeze too....

%%%

%%%Windows 7 Pro , GTX 580 Blender version with error : 2.66 buldbot r56296 and version that worked :offical 2.66 Short description of error : Blender Freeze On win7 when change smoke domain setting. Steps for others to reproduce the error (preferably based on attached .blend file): 1.set the deafault cube to a smoke domain. 2.change time scale value other setting as well also ctrl + D will do the same moving flow object freeze too.... %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I can confirm this, but even worse.
Just default scene -> Quick Smoke on the cube. Blender hangs.

SVN 56305%%%

%%%I can confirm this, but even worse. Just default scene -> Quick Smoke on the cube. Blender hangs. SVN 56305%%%
Author

%%%older build r56256 seems ok.%%%

%%%older build r56256 seems ok.%%%

%%%Fixed in svn rev56306. Thanks for the report, closing.%%%

%%%Fixed in svn rev56306. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35082
No description provided.